--- a/_posts/2019-07-21-momentom.md
+++ b/_posts/2019-07-21-momentom.md
@@ -12,7 +12,7 @@ tags: [시계열분석]
 ---
 
 
-모멘텀 전략이란 "자산 가격의 흐름이 최근 추세를 유지하려는 경향이 있다."는 가설을 기반으로 하는 전략이다.
+모멘텀 전략이란 `자산 가격의 흐름이 최근 추세를 유지하려는 경향이 있다.`는 가설을 기반으로 하는 전략이다.
 
 최근 수익률이 좋았던 주식을 사고 그렇지 않은 주식을 피하거나, 팔거나, 공매도한다.
 
@@ -63,6 +63,7 @@ stocks에는 tickers의 종가데이터를 넣는다.
 df_krx = fdr.StockListing('KRX')
 print(df_krx.head())
 ```
+
 | Symbol | Name     | Sector                  | Industry                                                                                 |
 |--------|----------|-------------------------|------------------------------------------------------------------------------------------|
 | 001250 | GS글로벌 | 상품 종합 도매업        | 수출입업(시멘트,철강금속,전기전자,섬유,기계화학),상품중개,광업,채석업/하수처리 서...     |
@@ -71,7 +72,7 @@ print(df_krx.head())
 | 011070 | LG이노텍 | 전자부품 제조업         | 기타 전자부품 제조업                                                                     |
 | 010060 | OCI      | 기초 화학물질 제조업    | 타르제품,카본블랙,무수프탈산,농약원제,석탄화학제품,정밀화학제품,플라스틱창호재 제조,판매 |
 
-
+<br><br>
 **종목 셋팅하기**
 ```python
 # 10개의 종목을 추출한다.
@@ -80,6 +81,7 @@ tickers = df_krx.Symbol[:10]
 # tickers = ['005930','079160','068270']
 print(tickers)
 ```
+
 |---|--------|
 | 0 | 001250 |
 | 1 | 082740 |
@@ -92,7 +94,7 @@ print(tickers)
 | 8 | 024070 |
 | 9 | 011420 |
 
-
+<br><br>
 **종가 가져오기**
 ```python
 stocks = pd.DataFrame()
@@ -121,6 +123,7 @@ print(stocks.head())
 | 2014-01-06 | 6229   | 5731   | 17400  | 82900  |   | 4800   | 2000   |
 | 2014-01-07 | 6279   | 5836   | 17100  | 83700  |   | 4756   | 2020   |
 
+<br>
 ```python
 # 과거 데이터순으로 정렬한다(날짜 오름차순(DataReader default))
 stocks = stocks.sort_index(ascending=True)
@@ -161,7 +164,8 @@ plt.figure(figsize=(12, 9))
 plt.xlabel('Days')
 plt.ylabel('Stock Price')
 
-# 모멘텀값이 최고인 5개 종목
+<br><br>
+** 모멘텀값이 최고인 5개 종목 **
 bests = momentums.max().sort_values(ascending=False).index[:5]
 
 ```python
@@ -182,12 +186,12 @@ for best in bests:
         continue
 ```
 
-![img_area](/img/posting/2019-07-21-001-result_top_5.PNG){: .post-img}
+![img_area](/img/posting/2019-07-21-001-result_top_5.PNG){: .post-img700}
 
 
 위 그래프는 90일간의 모멘텀을 잘 따른 5개의 종목을 보여준다.
 
-
+<br><br>
 **포트폴리오 전략 활용**
 20일간의 주가 범위를 ATR20(Average True Range)라고 하고 Risk Factor를 10 basis point 라고 한다.
 
