--- a/_posts/2019-07-21-momentom.md
+++ b/_posts/2019-07-21-momentom.md
@@ -192,7 +192,7 @@ for best in bests:
 위 그래프는 90일간의 모멘텀을 잘 따른 5개의 종목을 보여준다.
 
 <br><br>
-**포트폴리오 전략 활용**
+**포트폴리오 전략 활용** <br>
 20일간의 주가 범위를 ATR20(Average True Range)라고 하고 Risk Factor를 10 basis point 라고 한다.
 
 우리는 각 주식의 ATR이 미래에도 비슷하다고 가정하면 각 주식이 우리 포트폴리오의 10 basis points (0.1%), 즉 0.1 %의 일일 영향을 미칠 것으로 기대할 수 있다. 포트폴리오 내에서 해당 종목의 비중을 아래와 같이 적용한다면, 종목 위험에 기반한 포트폴리오 조정이 가능하다.
