--- a/_posts/2019-07-21-momentom.md
+++ b/_posts/2019-07-21-momentom.md
@@ -21,8 +21,9 @@ tags: [시계열분석]
 아래 예에서 모멘텀은 과거 90일간의 주가 흐름과 방향성의 회귀분석 R^2 값에 의해 계산되고 그 결과의 기울기(slope)를 분석한다.
 
 
+<br><br>
+**필요한 라이브러리**
 
-필요한 라이브러리
 ```python
 from datetime import datetime
 import pandas as pd
