--- a/_posts/2019-08-11-folium.md
+++ b/_posts/2019-08-11-folium.md
@@ -30,7 +30,7 @@ print(folium.__version__)
 
 
 <br><br>
-#### 1. 위도, 경도 정보 셋팅
+### 1. 위도, 경도 정보 셋팅
 ---
 
 target_df라는 DataFrame 변수에 미리 위도 경도가 포함된 데이터를 가져온다.
@@ -47,13 +47,15 @@ map_shic = folium.Map(location=main_location, zoom_start=8)
 ```
 
 <br><br>
-#### 2. map에 location 지정
+### 2. map에 location 지정
 ---
 
 타입변수를 두고 유형별로 색상을 다르게 지정할 수도 있다.
 
 
 **사용가능 컬러**
+`help(folium.Icon)` 을 통해 보다 많은 정보를 얻을 수 있다.
+
 ```
 ‘red’, ‘blue’, ‘green’, ‘purple’, ‘orange’, ‘darkred’, ’lightred’, ‘beige’, ‘darkblue’, ‘darkgreen’, ‘cadetblue’, ‘darkpurple’, ‘white’, ‘pink’, ‘lightblue’, ‘lightgreen’, ‘gray’, ‘black’, ‘lightgray’
 ```
@@ -81,3 +83,58 @@ map_test
 ```
 
 ![img_area](/img/posting/2019-08-11-001-map.PNG){: .post-img700}
+
+
+
+
+<br><br>
+### 3. 아이콘 변경하기
+---
+**info-sign** 이고 `fontawesome` 아이콘을 설정할 수 있다.
+아래 링크에서 원하는 아이콘을 찾아 설정해보자.(단, 모든 아이콘이 적용되진 않는다. test해볼 것)
+
+https://fontawesome.com/icons?from=io
+
+아래 코드는 조건에 따라 `icon` 변수에 타입을 설정하고 매핑하도록 하였다.
+
+icon=folium.Icon( **icon = icon** , color = color)
+
+
+```python
+for x in range(len(target_df)):
+
+    if target_df['type'][x] == 'A':
+        color = 'blue'
+        icon = 'home'
+    elif target_df['type'][x] == 'B':
+        color = 'red'
+        icon = 'star'
+    elif target_df['type'][x] == 'C':    
+        color = 'green'
+        icon = 'flag'
+    elif target_df['type'][x] == 'D':    
+        color = 'gray'
+        icon = 'bookmark'
+    else:
+        color = 'white'  # 미확인
+
+    location = (latitude[x],longitude[x])
+    folium.Marker(location, popup=target_df['store'][x], icon=folium.Icon(icon = icon, color = color)).add_to(map_test)
+
+map_test.save(os.path.join('datas', 'map_test.html')) # 저장하기
+map_test
+```
+
+![img_area](/img/posting/2019-08-11-001-map2.PNG){: .post-img700}
+
+
+
+
+
+<br>
+
+### **Reference**
+---
+- https://python-visualization.github.io/folium/modules.html
+
+<br>
