--- a/_posts/2019-12-15-data_law.md
+++ b/_posts/2019-12-15-data_law.md
@@ -11,16 +11,18 @@ categories : [Trend]
 tags: [핀테크]
 ---
 
+* 2019.12.15 개시글을 update하여 게시합니다.(수정일 20.01.13)
 
-20대 정기국회가 12월 10일 종료되었다.
-이번에도 수많은 중대사안들이 있었지만 핀테크를 포함한 전 금융사의 관심은 `데이터3법`에 있었다.
 
-하지만 결론은, 법사위 통과 실패.
-올해도 개인정보보호법 정비는 실현되지 못했다.
+2019년 12월 10일 정기국회 종료시, 법사위 통과 실패로 많은 금융업 및 데이터 관련 기업 종사자들의 아쉬움을 샀던 `데이터3법`
 
 데이터 3법이라 불리는 `개인정보보호법/신용정보법/정보통신망법`이란 무엇인지,
 지금까지 해당법에 대한 의안이 나오기까지 어떤 히스토리를 갖고 있는지
 개괄적으로 살펴보았다.
+
+물론 정부기관에서 제공하는 **정책위키** 참고시, 더 정확하고 잘 정리된 자료로 확인 할 수 있다. 아래 내용은 이와 더불어 참고하면 좋을 것이다.
+http://www.korea.kr/special/policyCurationView.do?newsId=148867915
+
 
 <br><br>
 ### 데이터 3법의 개정안 주요내용
